# 1176-Ai-Dynamic-Compressor

./: README.md
Project/: CmakeLists.txt
Source/: PluginProcessor.cpp  PluginProcessor.h
workflows/: CMakeLists.txt  build-and-test.yml
